# LemonCord

./: .codecov.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: audit.yml  auto_labeler_issue.yml  auto_labeler_pr.yml  codecov.yml  fmt.yml  lint.yml
app/: .gitignore  Cargo.toml
app/src/: main.rs  toolbar.rs
src/: log.rs  main.rs  tests.rs
