[package]
name = "lemon-cord"
version = "0.1.1"
edition = "2021"
authors = ["Lemon Rose (japandotorg)"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/japandotorg/lemon-cord"
description = "A light weight discord client made with love using the Rust programming language."
keywords = ["discord", "app", "client", "discord-client", "discord-app"]
categories = ["web-programming", "gui"]
exclude = [".github/**", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = { version = "4.0.0" }
tracing = { version = "0.1" }
image = { version = "0.24.5" }
anyhow = { version = "1.0.68" }
tokio = { version = "1.24.2", features = ["full"] }
wry = { version = "0.24.1", features = ["devtools"] }

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
debug = false
debug-assertions = false
