[package]
name = "lemon-cord"
version = "0.1.2"
edition = "2021"
authors = ["Lemon Rose (japandotorg)"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/japandotorg/lemon-cord"
description = "A light weight discord client made with love using the Rust programming language."
keywords = ["discord", "app", "client", "discord-client", "discord-app"]
categories = ["web-programming", "gui"]
exclude = [".github/**", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = { version = "5.0.1" }
tracing = { version = "0.1" }
image = { version = "0.24.6" }
anyhow = { version = "1.0.71" }
tokio = { version = "1.28.0", features = ["full"] }
wry = { version = "0.28.3", features = ["devtools"] }
colored = { version = "2.0.0" }
strum_macros = { version = "0.24.3" }
strum = { version = "0.24.1" }

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
debug = false
debug-assertions = false
